# my-builds-api

./: .env_template  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  security.py  utils.py  validators.py
app/models/: users.py
app/routers/: auth.py  users.py
app/schemas/: users.py
migrations/: env.py
migrations/versions/: M01_1ded42b82f3b_init.py  M01_59f0ee41c5a2_initial_migration.py  M01_b8e2d8a0ac8c_init.py  M02_27d27d65e6ef_create_permissions.py
tests/: conftest.py  test_my_builds_api.py  test_utils.py
tests/tes_models/: test_users.py
tests/test_routers/: test_users.py
